Added lua script interpreter.
Lua C function version() is exported only. More lua c functions will
come soon.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,5 @@
 	ignore = dirty
 [submodule "lua-mirror"]
 	path = lua-mirror
-	url = https://github.com/EtherealWake/lua-mirror
+	url = https://github.com/zausiu/lua-mirror
+	ignore = dirty
