--- a/my.conf.template
+++ b/my.conf.template
@@ -9,7 +9,7 @@ concurrency_limit = 1
 
 [SESSION]
 ; advanced configuration to tune tcp session.
-recv_time_out = 300
+response_from_peer_time_out = 300
 have_to_send_data_within_this_timeperiod = 300
 snd_speed_control = 25
 wait_for_fin_from_peer_time_out = 400
