--- a/my.conf.template
+++ b/my.conf.template
@@ -5,7 +5,7 @@ pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.smallsize.pcap
 dst_addr = 192.168.44.129
 ; the destination port that the traffic will be forwarded to.
 dst_port = 81
-concurrency_limit = 1
+concurrency_limit = 1000
 
 [SESSION]
 ; advanced configuration to tune tcp session.
@@ -13,3 +13,7 @@ response_from_peer_time_out = 300
 have_to_send_data_within_this_timeperiod = 300
 snd_speed_control = 25
 wait_for_fin_from_peer_time_out = 400
+
+[LOG]
+log_on = 1
+duplicate_log_to_stdout = 0
