--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@ Debug/
 .svn/
 .metadata/
 .settings/
-.deps/
-.bins/
+deps/
+bins/
+help_debug/
 horos
 *.o
 *~
@@ -21,5 +22,6 @@ core*
 *.png
 *.html
 *.htm
+*.jam
 
 !readline
