--- a/my.conf
+++ b/my.conf
@@ -11,11 +11,15 @@ onoff_random_port = 1
 [SESSION]
 ; advanced configuration to tune tcp session.
 response_from_peer_time_out = 300
-have_to_send_data_within_this_timeperiod = 300
+have_to_send_data_within_this_timeperiod = 600
 snd_speed_control = 25
 wait_for_fin_from_peer_time_out = 400
-enable_active_close = 0
+enable_active_close = 1
 
 [LOG]
 log_on = 1
-duplicate_log_to_stdout = 0
+duplicate_log_to_stdout = 1
+
+[TESTSUITE]
+lua_scripts_home = /home/kamus/projs/horoscope/lua_scripts
+so_home = /home/kamus/projs/horoscope/so_home
