--- a/my.conf.template
+++ b/my.conf.template
@@ -19,3 +19,7 @@ enable_active_close = 1
 [LOG]
 log_on = 1
 duplicate_log_to_stdout = 1
+
+[TESTSUITE]
+lua_scripts_home = /home/kamus/projs/horoscope/lua_scripts
+so_home = /home/kamus/projs/horoscope/so_home
