--- a/my.conf.template
+++ b/my.conf.template
@@ -7,6 +7,7 @@ dst_addr = 192.168.44.129
 dst_port = 81
 concurrency_limit = 1000
 onoff_random_port = 1
+accidental_death_pcap_file_limit = 100
 
 [SESSION]
 ; advanced configuration to tune tcp session.
@@ -21,5 +22,5 @@ log_on = 1
 duplicate_log_to_stdout = 1
 
 [TESTSUITE]
-lua_scripts_home = /home/kamus/projs/horoscope/lua_scripts
-so_home = /home/kamus/projs/horoscope/so_home
+;lua_scripts_home = /home/kamus/projs/horoscope/lua_scripts
+;so_home = /home/kamus/projs/horoscope/so_home
