--- a/my.conf
+++ b/my.conf
@@ -5,12 +5,16 @@ pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.smallsize.pcap
 dst_addr = 192.168.44.129
 ; the destination port that the traffic will be forwarded to.
 dst_port = 81
-concurrency_limit = 100
+concurrency_limit = 1000
 onoff_random_port = 1
+accidental_death_pcap_file_limit = 100
+sniff_method = tcp
+; only available when sniff_method is set to tcp
+;next_hop = 
 
 [SESSION]
 ; advanced configuration to tune tcp session.
-response_from_peer_time_out = 500
+response_from_peer_time_out = 600
 have_to_send_data_within_this_timeperiod = 600
 snd_speed_control = 25
 wait_for_fin_from_peer_time_out = 400
@@ -21,5 +25,5 @@ log_on = 1
 duplicate_log_to_stdout = 1
 
 [TESTSUITE]
-lua_scripts_home = /home/kamus/projs/horoscope/lua_scripts
-so_home = /home/kamus/projs/horoscope/so_home
+;lua_scripts_home = /home/kamus/projs/horoscope/lua_scripts
+;so_home = /home/kamus/projs/horoscope/so_home
