--- a/my.conf.template
+++ b/my.conf.template
@@ -8,7 +8,8 @@ dst_port = 81
 concurrency_limit = 1000
 onoff_random_port = 1
 accidental_death_pcap_file_limit = 100
-sniff_method = raw
+; sniff_method can be set to raw, pcap, tcp
+sniff_method = tcp
 ; only available when sniff_method is set to tcp
 ;next_hop = 
 
