--- a/my.conf.template
+++ b/my.conf.template
@@ -14,6 +14,7 @@ sniff_method = tcp
 ; advanced configuration to tune tcp session.
 response_from_peer_time_out = 6000
 have_to_send_data_within_this_timeperiod = 2500
+injecting_rt_traffic_timeout = 6000
 snd_speed_control = 1900
 wait_for_fin_from_peer_time_out = 2500
 enable_active_close = 0
