--- a/my.conf.template
+++ b/my.conf.template
@@ -1,6 +1,8 @@
 ; the configuration file
 [MAIN]
 pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.smallsize.pcap
+; pcap_file_path = /mnt/hgfs/e_drive/projs/traffic_to_80port.pcap
+; pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.huge.10.130.68.100.pcap
 ; the destination address that the traffic will be forwarded to.
 dst_addr = 192.168.44.129
 ; the destination port that the traffic will be forwarded to.
@@ -8,7 +10,7 @@ dst_port = 81
 concurrency_limit = 1000
 onoff_random_port = 1
 accidental_death_pcap_file_limit = 100
-sniff_method = tcp
+sniff_method = pcap
 
 [SESSION]
 ; advanced configuration to tune tcp session.
