--- a/my.conf.template
+++ b/my.conf.template
@@ -1,7 +1,7 @@
 ; the configuration file
 [MAIN]
 pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.smallsize.pcap
-; pcap_file_path = /mnt/hgfs/e_drive/projs/traffic_to_80port.pcap
+;  pcap_file_path = /mnt/hgfs/e_drive/projs/traffic_to_80port.pcap
 ; pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.huge.10.130.68.100.pcap
 ; the destination address that the traffic will be forwarded to.
 dst_addr = 192.168.44.129
@@ -11,6 +11,7 @@ concurrency_limit = 1000
 onoff_random_port = 1
 accidental_death_pcap_file_limit = 100
 sniff_method = pcap
+asio_thrd_num = -1
 
 [SESSION]
 ; advanced configuration to tune tcp session.
@@ -18,7 +19,7 @@ session_count_limit = 40000
 response_from_peer_time_out = 6000
 have_to_send_data_within_this_timeperiod = 2500
 injecting_rt_traffic_timeout = 6000
-snd_speed_control = 1900
+retransmit_time_interval = 700
 wait_for_fin_from_peer_time_out = 2500
 enable_active_close = 0
 
