--- a/my.conf.template
+++ b/my.conf.template
@@ -1,39 +1,30 @@
 ; the configuration file
 [MAIN]
-pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.smallsize.pcap
-;  pcap_file_path = /mnt/hgfs/e_drive/projs/traffic_to_80port.pcap
-<<<<<<< HEAD
-;pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.huge.10.130.68.100.pcap
-=======
-; pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.huge.10.130.68.100.pcap
->>>>>>> tmp
+;pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.smallsize.pcap
+pcap_file_path = /mnt/hgfs/e_drive/projs/traffic_to_80port.pcap
+;  pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.huge.10.130.68.100.pcap
 ; the destination address that the traffic will be forwarded to.
 dst_addr = 192.168.44.129
 ; the destination port that the traffic will be forwarded to.
 dst_port = 81
-concurrency_limit = 1000
+concurrency_limit = 800
 onoff_random_port = 1
-accidental_death_pcap_file_limit = 100
+accidental_death_pcap_file_limit = 1000
 sniff_method = pcap
 asio_thrd_num = -1
 
 [SESSION]
 ; advanced configuration to tune tcp session.
 session_count_limit = 40000
-response_from_peer_time_out = 6000
-have_to_send_data_within_this_timeperiod = 2500
-<<<<<<< HEAD
-injecting_rt_traffic_timeout = 3000
+response_from_peer_time_out = 3000
+have_to_send_data_within_this_timeperiod = 2000
+injecting_rt_traffic_timeout = 2000
 retransmit_time_interval = 400
-=======
-injecting_rt_traffic_timeout = 6000
-retransmit_time_interval = 700
->>>>>>> tmp
 wait_for_fin_from_peer_time_out = 2500
 enable_active_close = 0
 
 [TESTSUITE]
-;lua_scripts_home = /home/kamus/projs/horoscope/lua_scripts
+lua_scripts_home = /home/kamus/projs/horoscope/lua_scripts
 ;so_home = /home/kamus/projs/horoscope/so_home
 
 [LOG]
