--- a/my.conf.template
+++ b/my.conf.template
@@ -1,4 +1,6 @@
 ; the configuration file
+; NOTICE: there is a bug in ini parsing library. ;xxx and ;xxx will
+; be considered as duplicate option name. ; is the comment symbol.
 [MAIN]
 pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.smallsize.pcap
 ;pcap_file_path = /mnt/hgfs/e_drive/projs/traffic_to_80port.pcap
@@ -22,6 +24,7 @@ injecting_rt_traffic_timeout = 2000
 retransmit_time_interval = 400
 wait_for_fin_from_peer_time_out = 2500
 enable_active_close = 0
+clone = 5
 
 [TESTSUITE]
 ;lua_scripts_home = /home/kamus/projs/horoscope/lua_scripts
