--- a/my.conf
+++ b/my.conf
@@ -1,6 +1,6 @@
 ; the configuration file
 [MAIN]
-;pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.smallsize.pcap
+pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.smallsize.pcap
 ;____pcap_file_path = /mnt/hgfs/e_drive/projs/traffic_to_80port.pcap
 ;  pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.huge.10.130.68.100.pcap
 ;_pcap_file_path = /mnt/hgfs/e_drive/projs/10.130.68.100.incoming.pcap 
@@ -8,11 +8,11 @@
 dst_addr = 192.168.44.129
 ; the destination port that the traffic will be forwarded to.
 dst_port = 80
-concurrency_limit = 1
+concurrency_limit = 60
 onoff_random_port = 1
 accidental_death_pcap_file_limit = 1000
 sniff_method = pcap
-asio_thrd_num = 1
+asio_thrd_num = 2
 
 [SESSION]
 ; advanced configuration to tune tcp session.
