--- a/my.conf
+++ b/my.conf
@@ -1,19 +1,19 @@
 ; the configuration file
 [MAIN]
-;___pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.smallsize.pcap
+pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.smallsize.pcap
 ;____pcap_file_path = /mnt/hgfs/e_drive/projs/traffic_to_80port.pcap
-;pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.huge.10.130.68.100.pcap
+;  pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.huge.10.130.68.100.pcap
 ;_pcap_file_path = /mnt/hgfs/e_drive/projs/10.130.68.100.incoming.pcap 
 ; the destination address that the traffic will be forwarded to.
 dst_addr = 192.168.44.129
 ; the destination port that the traffic will be forwarded to.
 dst_port = 80
-concurrency_limit = 900
+concurrency_limit = 5000
 onoff_random_port = 1
-accidental_death_pcap_file_limit = 0
+accidental_death_pcap_file_limit = 1000
 sniff_method = pcap
-asio_thrd_num = 2
-pkt_pass_rate = 2
+asio_thrd_num = -1
+pkt_pass_rate = 1000
 
 [SESSION]
 ; advanced configuration to tune tcp session.
@@ -23,11 +23,11 @@ have_to_send_data_within_this_timeperiod = 2000
 injecting_rt_traffic_timeout = 1300
 retransmit_time_interval = 10
 wait_for_fin_from_peer_time_out = 2500
-enable_active_close = 1
+enable_active_close = 0
 clone = 0
 
 [TESTSUITE]
-lua_scripts_home = /home/kamus/projs/horoscope/lua_scripts
+;lua_scripts_home = /home/kamus/projs/horoscope/lua_scripts
 ;so_home = /home/kamus/projs/horoscope/so_home
 
 [LOG]
