A small efficiency improvement.

--- a/my.conf
+++ b/my.conf
@@ -1,6 +1,6 @@
 ; the configuration file
 [MAIN]
-pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.smallsize.pcap
+;pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.smallsize.pcap
 ;____pcap_file_path = /mnt/hgfs/e_drive/projs/traffic_to_80port.pcap
 ;  pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.huge.10.130.68.100.pcap
 ;_pcap_file_path = /mnt/hgfs/e_drive/projs/10.130.68.100.incoming.pcap 
@@ -12,7 +12,7 @@ concurrency_limit = 5000
 onoff_random_port = 1
 accidental_death_pcap_file_limit = 1000
 sniff_method = pcap
-asio_thrd_num = -1
+asio_thrd_num = 0
 pkt_pass_rate = 1000
 
 [SESSION]
@@ -20,11 +20,13 @@ pkt_pass_rate = 1000
 session_count_limit = 40000
 response_from_peer_time_out = 3000
 have_to_send_data_within_this_timeperiod = 2000
-injecting_rt_traffic_timeout = 1300
+injecting_rt_traffic_timeout = 500
 retransmit_time_interval = 10
 wait_for_fin_from_peer_time_out = 2500
 enable_active_close = 0
 clone = 0
+; request_pattern = \r\n\r\n$
+;request_pattern = --\r\n\r\n$
 
 [TESTSUITE]
 ;lua_scripts_home = /home/kamus/projs/horoscope/lua_scripts
