--- a/my.conf.template
+++ b/my.conf.template
@@ -1,6 +1,6 @@
 ; the configuration file
 [MAIN]
-;pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.smallsize.pcap
+pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.smallsize.pcap
 ;____pcap_file_path = /mnt/hgfs/e_drive/projs/traffic_to_80port.pcap
 ;  pcap_file_path = /mnt/hgfs/e_drive/projs/traffic.huge.10.130.68.100.pcap
 ;_pcap_file_path = /mnt/hgfs/e_drive/projs/10.130.68.100.incoming.pcap 
@@ -13,19 +13,17 @@ onoff_random_port = 1
 accidental_death_pcap_file_limit = 1000
 sniff_method = pcap
 asio_thrd_num = -1
-pkt_pass_rate = 1000
 
 [SESSION]
 ; advanced configuration to tune tcp session.
 session_count_limit = 40000
-response_from_peer_time_out = 2000
-have_to_send_data_within_this_timeperiod = 1800
-injecting_rt_traffic_timeout = 2000
+response_from_peer_time_out = 3000
+have_to_send_data_within_this_timeperiod = 2000
+injecting_rt_traffic_timeout = 1300
 retransmit_time_interval = 10
 wait_for_fin_from_peer_time_out = 2500
-enable_active_close = 0
+enable_active_close = 1
 clone = 0
-; request_pattern = \r\n\r\n$
 
 [TESTSUITE]
 ;lua_scripts_home = /home/kamus/projs/horoscope/lua_scripts
